[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/hotspot_panel.gd" id="1"]

[node name="HotspotPanel" type="Control"]
anchors_preset = 8
anchor_bottom = 1.0
anchor_right = 1.0
offsets = Rect2(0, 0, 0, 0)
visible = false
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 14
anchor_left = 0.6
anchor_right = 0.98
anchor_top = 0.05
anchor_bottom = 0.55
custom_constants/margin_left = 16
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(48, 48)
stretch_mode = 4

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header"]
size_flags_horizontal = 3
text = "Hotspot"
uppercase = true

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
text = "Close"

[node name="Body" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
size_flags_vertical = 3

[node name="Text" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Body"]
size_flags_vertical = 3
text = "Hotspot details go here."
wrap_mode = 1

[node name="Actions" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
alignment = 1

[node name="MiniGameButton" type="Button" parent="MarginContainer/VBoxContainer/Actions"]
text = "Try Mini-Game"

[node name="QuizButton" type="Button" parent="MarginContainer/VBoxContainer/Actions"]
text = "Open Zone Quiz"

